--- a/PharmacyIMS/Windows/AddSupplierWindow.xaml
+++ b/PharmacyIMS/Windows/AddSupplierWindow.xaml
@@ -24,11 +24,11 @@
         </Grid.RowDefinitions>
         <TextBlock VerticalAlignment="Center" Text="Supplier Name:"/>
         <TextBlock VerticalAlignment="Center" Text="Supplier Address:" Grid.Row="1"/>
-        <TextBlock VerticalAlignment="Center" Text="Supplier Details:" Grid.Row="2"/>
-        
+        <TextBlock VerticalAlignment="Center" Text="Supplier Details:" Grid.Row="3"/>
+
         <TextBox x:Name="SupplierNameTbx" Grid.Column="1" Margin="5" />
-        <TextBox x:Name="SupplierAddressTbx" Grid.Column="1" Margin="5" Grid.Row="1"/>
-        <TextBox x:Name="SupplierDetailsTbx" Grid.Column="1" Margin="5" Grid.Row="2"/>
+        <TextBox x:Name="SupplierAddressTbx" Grid.Column="1" TextWrapping="Wrap" Grid.RowSpan="2" Margin="5" Grid.Row="1"/>
+        <TextBox x:Name="SupplierDetailsTbx" Grid.RowSpan="4" TextWrapping="Wrap" Grid.Column="1" Margin="5" Grid.Row="3"/>
 
         <StackPanel Grid.Row="7" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Click="AddSupplierBtn_Click" x:Name="AddSupplierBtn" Content="Add" Margin="5" Width="100"/>
